--- a/popup/szurupull.html
+++ b/popup/szurupull.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <style>
+      body {
+          width: 400px;
+      }
       .left {
           display: block;
           float: left;
